2021-08-13  Alex Christensen  <achristensen@webkit.org>

        Unreviewed, reverting r281009.

        Timing not quite right

        Reverted changeset:

        "Unprefix -webkit-backface-visibility"
        https://bugs.webkit.org/show_bug.cgi?id=170983
        https://commits.webkit.org/r281009

2021-08-13  Tim Nguyen  <ntim@apple.com>

        Check for dialog existence in top layer in HTMLDialogElement::showModal & close
        https://bugs.webkit.org/show_bug.cgi?id=227907

        Reviewed by Antti Koivisto.

        Test: imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-showModal.html

        Test expectations are unchanged because the test uses elementFromPoint, meaning that behaviour difference isn't noticeable
        until top layer rendering bits are implemented (which would change elementFromPoint's result by shuffling z-order based on top layer elements).

        * dom/Element.h:
        (WebCore::Element::isInTopLayer const):
        * html/HTMLDialogElement.cpp:
        (WebCore::HTMLDialogElement::showModal):
        (WebCore::HTMLDialogElement::close):

2021-08-13  Jean-Yves Avenard  <jya@apple.com>

        nexttrack and previoustrack MediaSession handlers not working
        https://bugs.webkit.org/show_bug.cgi?id=229068
        rdar://80100092

        Reviewed by Youenn Fablet.

        Map between MediaSession action next/previousTrack and RemoteControlCommandType ones
        were inverted.
        There is no infrastrure in place to ensure that the right MRMediaRemoteCommand is
        used with the MediaRemote backend, which prevents automating the test.

        * Modules/mediasession/MediaSession.cpp:
        (WebCore::platformCommandForMediaSessionAction):

2021-08-13  Youenn Fablet  <youenn@apple.com>

        Overly verbose catchable fetch error messages lead to cross-origin leaks
        https://bugs.webkit.org/show_bug.cgi?id=228861

        Reviewed by Brent Fulgham.
